added functionalities to isnert a new client including validations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ logging.level.ro.tuc=info
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8080}
+server.servlet.context-path=/api
+
