add method to construct token for an energy user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,12 @@ logging.level.root=debug
 logging.level.org.springframework=debug
 logging.level.ro.tuc=debug
 
+###############################################
+### SECURITY CONFIGURATIONS ###
+###############################################
+energy.jwt.token.secret=Y2xhdWRpdWFuZHJlaWJpdGx1dGl1ZHNybDIwMjI=
+energy.jwt.token.validity=18000000
+
 
 ###############################################
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
