added configuration for security with endpoints secured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ logging.level.ro.tuc=debug
 ###############################################
 energy.jwt.token.secret=Y2xhdWRpdWFuZHJlaWJpdGx1dGl1ZHNybDIwMjI=
 energy.jwt.token.validity=18000000
+energy.jwt.token.rsa=HS512
 
 
 ###############################################
