--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password = ${database.password}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 
@@ -24,7 +24,7 @@ server.tomcat.threads.max = 1
 ###############################################
 ### LOGGING CONFIGURATIONS ###
 ###############################################
-logging.level.root=debug
+logging.level.root=info
 logging.level.org.springframework=debug
 logging.level.ro.tuc=debug
 
