create bean with password encoder and create methods to register a user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.password = ${database.password}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 
@@ -31,9 +31,9 @@ logging.level.ro.tuc=debug
 ###############################################
 ### SECURITY CONFIGURATIONS ###
 ###############################################
-energy.jwt.token.secret=Y2xhdWRpdWFuZHJlaWJpdGx1dGl1ZHNybDIwMjI=
-energy.jwt.token.validity=18000000
-energy.jwt.token.rsa=HS512
+energy.jwt.tokenSecret=Y2xhdWRpdWFuZHJlaWJpdGx1dGl1ZHNybDIwMjI=
+energy.jwt.tokenValidity=18000000
+energy.jwt.tokenRsa=HS512
 
 
 ###############################################
