--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,13 @@ energy.jwt.tokenRsa=HS512
 server.port=${PORT:8080}
 server.servlet.context-path=/api
 
+###############################################
+### FLYWAY ###
+###############################################
+flyway.url = jdbc:postgresql://${database.ip}:${database.port}/${database.name}
+flyway.schemas = ${database.name}
+flyway.user = ${database.user}
+flyway.password = ${database.password}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
+flyway.locations=filesystem:db/migration
