--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,17 +20,59 @@ variables:
   vmImageName: 'ubuntu-latest'
 
 stages:
-- stage: Build
-  displayName: Build stage
-  jobs:
-  - job: CodeCoverage
-    displayName: Code Coverage
-    pool:
-      name: local
-    steps:
-    - task: Maven@3
-      inputs:
-        mavenPomFile: 'pom.xml'
-        publishJUnitResults: true
-        testResultsFiles: '**/surefire-reports/TEST-*.xml'
-        codeCoverageToolOption: 'JaCoCo'
+  - stage: Build
+    displayName: Build stage
+    jobs:
+      - job: CodeCoverage
+        displayName: Code Coverage
+        pool:
+          name: local
+        steps:
+          - task: Maven@3
+            inputs:
+              mavenPomFile: "pom.xml"
+              publishJUnitResults: true
+              testResultsFiles: "**/surefire-reports/TEST-*.xml"
+              codeCoverageToolOption: "JaCoCo"
+              codeCoverageFailIfEmpty: true
+              javaHomeOption: "JDKVersion"
+              mavenVersionOption: "Default"
+              mavenAuthenticateFeed: false
+              effectivePomSkip: false
+              sonarQubeRunAnalysis: false
+              checkStyleRunAnalysis: true
+          - task: Maven@3
+            displayName: "Maven Test"
+            inputs:
+              mavenPomFile: "pom.xml"
+              goals: "test"
+          - task: PublishTestResults@2
+            displayName: "Publish test results"
+            inputs:
+              testResultsFormat: "JUnit"
+              mergeTestResults: true # Optional
+          - task: PublishCodeCoverageResults@1
+            displayName: "Publish publish code coverage"
+            inputs:
+              summaryFileLocation: $(System.DefaultWorkingDirectory)/target/site/jacoco/jacoco.xml
+              pathToSources: $(System.DefaultWorkingDirectory)/src/main/java/
+      - job: Build
+        displayName: Build
+        pool:
+          name: local
+        steps:
+          - task: Docker@2
+            displayName: Build and push an image to container registry
+            inputs:
+              command: buildAndPush
+              repository: $(imageRepository)
+              dockerfile: $(dockerfilePath)
+              containerRegistry: $(dockerRegistryServiceConnection)
+              tags: |
+                latest
+                $(Build.BuildId)
+          - task: CopyFiles@2
+            inputs:
+              SourceFolder: ""
+              Contents: "docker-compose.yml"
+              TargetFolder: "$(Agent.WorkFolder)"
