--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###############################################
 ### DATABASE CONNECTIVITY CONFIGURATIONS ###
 ###############################################
-database.ip = ${DB_IP:localhost}
+database.ip = ${DB_IP:db}
 database.port = ${DB_PORT:5432}
 database.user = ${DB_USER:postgres}
 database.password = ${DB_PASSWORD:postgres}
