--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ###############################################
 ### DATABASE CONNECTIVITY CONFIGURATIONS ###
 ###############################################
-database.ip = ${DB_IP:db}
-database.port = ${DB_PORT:5432}
+database.ip = ${DB_IP:localhost}
+database.port = ${DB_PORT:5433}
 database.user = ${DB_USER:postgres}
 database.password = ${DB_PASSWORD:postgres}
 database.name = ${DB_DBNAME:energy_monitoring_db}
