--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ###############################################
 ### DATABASE CONNECTIVITY CONFIGURATIONS ###
 ###############################################
-database.ip = ${DB_IP:localhost}
+database.ip = ${DB_IP:demo-db}
 database.port = ${DB_PORT:5432}
 database.user = ${DB_USER:root}
 database.password = ${DB_PASSWORD:postgres}
@@ -18,15 +18,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 
 server.tomcat.threads.max = 1
 ###############################################
 ### LOGGING CONFIGURATIONS ###
 ###############################################
-logging.level.root=debug
-logging.level.org.springframework=debug
-logging.level.ro.tuc=debug
+logging.level.root=error
+logging.level.org.springframework=error
+logging.level.ro.tuc=error
 
 ###############################################
 ### SECURITY CONFIGURATIONS ###
@@ -57,7 +57,7 @@ flyway.locations=filesystem:db/migration
 ###############################################
 # RABBIT MQ
 ###############################################
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=claudiu
 spring.rabbitmq.password=claudiu
