--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,13 @@ flyway.password = ${database.password}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=false
 flyway.locations=filesystem:db/migration
+
+###############################################
+# RABBIT MQ
+###############################################
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=claudiu
+spring.rabbitmq.password=claudiu
+
+queue.name=energy
