--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,13 @@
             <version>2.7.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.github.briandilley.jsonrpc4j/jsonrpc4j -->
+        <dependency>
+            <groupId>com.github.briandilley.jsonrpc4j</groupId>
+            <artifactId>jsonrpc4j</artifactId>
+            <version>1.6</version>
+        </dependency>
+
 
 
     </dependencies>
